# docker-ros2-rover-simulation-final

./: .gitignore  README.md
src/publisher_velocity/: package.xml  setup.cfg  setup.py
src/publisher_velocity/publisher_velocity/: publisher_cmd.py
src/rover_description/: package.xml  setup.cfg  setup.py
src/rover_description/launch/: display.launch.py  gazebo.launch.py
src/rover_description/urdf/: rover.urdf
src/rover_gz_description/: CMakeLists.txt  package.xml
src/rover_gz_description/launch/: display.launch.py  gazebo.launch.py
src/rover_gz_description/rviz/: rover.rviz
src/rover_gz_description/urdf/: rover.urdf
